# heritage-connector

./: .eslintrc.js  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  Makefile  PIPELINES.md  Pipfile  README.md  config.ini  config.sample.ini  package-lock.json  package.json  pyproject.toml  requirements-vam.txt  requirements.txt  requirements_dev.txt  setup.py  spacy_create_kb.ipynb  wikidata_test.py
.ebextensions/: python.config
.elasticbeanstalk/: config.yml
config/: best_spacy_pipeline.py  config.sample.ini  config_vanda.ini  field_mapping.sample.json  field_mapping.sample.py  field_mapping_vanda.py
demos/: 2020_06_17 manual_links_analysis.ipynb  2020_06_17_get_links.ipynb  2020_06_19 fuzzy string matching.ipynb  2020_06_22 designing filters.ipynb  2020_06_23 SPARQL filter.ipynb  NER playground.ipynb  Record Disambiguation - Objects.ipynb  Record Disambiguation - Orgs.ipynb  Record Disambiguation - People.ipynb  Record Disambiguation - Using Imported Classifier.ipynb  Record disambiguation.ipynb  objects_classifier_sample_for_review.xlsx  people_adlib_classifier_sample_for_review.xlsx  people_classifier_sample_for_review.xlsx
docs/: about.rst  api.rst  architecture.rst  bibliography.rst  conf.py  data_ingestion.rst  developer_guide.rst  entity_matching.rst  getting_started.rst  index.rst  information_retrieval.rst  ner_nel.rst  reconciling_fields.rst  record_linkage.rst  tutorials.rst  why.rst
experiments/: 2020_06_10 mimsy data exploration & URL extraction.ipynb  2020_06_17 manual_links_analysis.ipynb  (+29 more)
(+133 files in other folders)
