[tool.poetry]
name = "heritage-connector"
version = "0.1.0"
description = ""
authors = ["Kalyan Dutia <kalyan.dutia@sciencemuseum.ac.uk>", "Jamie Unwin <jamie.unwin@sciencemuseum.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.7.1"
flake8 = "^3.8.3"
spacy = "^2.3.2"
lxml = "^4.5.2"
pandas = "^1.1.1"
sparqlwrapper = "^1.8.5"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.12.0"
elasticsearch = "^7.9.1"
rdflib = "^5.0.0"
rdflib-jsonld = "^0.5.0"
pylint = "^2.6.0"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
jinja2 = "^2.11.2"
aiofiles = "^0.5.0"
python-multipart = "^0.0.5"
torch = "^1.6.0"
dgl = "^0.5.1"
dglke = "^0.1.1"
click = "^7.1.2"
matplotlib = "^3.3.1"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
